--- a/RDE09-Gabriel_Emanuel.html
+++ b/RDE09-Gabriel_Emanuel.html
@@ -11,10 +11,15 @@
         <h2>Tag iframe</h2>
         ...... Definição ......
 
-        <h2>Incorporar Outro Site dentro do Site</h2>
-
+        <h3>Incorporar Outro Site dentro do Site</h3>
         <iframe src="http://irati.ifpr.edu.br" height=300px width=300px></iframe>
         
+        <h3>Incorporar Áudios</h3>
+        <iframe width="30%" height="30%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/163463620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gabriel-prestes-2" title="Gabriel Prestes 2" target="_blank" style="color: #cccccc; text-decoration: none;">Gabriel Prestes 2</a> · <a href="https://soundcloud.com/gabriel-prestes-2/os-serranos-de-ch-o-batido" title="Os serranos - de chão batido, rancho de beira de estrada" target="_blank" style="color: #cccccc; text-decoration: none;">Os serranos - de chão batido, rancho de beira de estrada</a></div>
+
+        <h3>Incorporar Vídeos</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fYJl-7jRzuw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </body>
 </html>
 
